RESOLVED FIXED 254163
[GStreamer][WebRTC] webrtc/libwebrtc/setLocalDescriptionCrash.html fails
https://bugs.webkit.org/show_bug.cgi?id=254163
Summary [GStreamer][WebRTC] webrtc/libwebrtc/setLocalDescriptionCrash.html fails
Philippe Normand
Reported 2023-03-20 10:07:13 PDT
.
Attachments
Philippe Normand
Comment 1 2023-03-20 10:09:34 PDT
EWS
Comment 2 2023-03-22 03:28:15 PDT
Committed 261954@main (2a1e99580320): <https://commits.webkit.org/261954@main> Reviewed commits have been landed. Closing PR #11715 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-03-22 03:29:22 PDT
Note You need to log in before you can comment on or make changes to this bug.