[GStreamer][WebRTC] webrtc/libwebrtc/setLocalDescriptionCrash.html fails https://bugs.webkit.org/show_bug.cgi?id=254163

Reviewed by Xabier Rodriguez-Calvar.

Detect SDP messages without version attribute and fail accordingly.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::doSetLocalDescription):
(WebCore::GStreamerMediaEndpoint::setDescription):

Canonical link: https://commits.webkit.org/261954@main